@@ -122,7 +122,7 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2013-2017 Michal Josef Špaček
+© 2013-2022 Michal Josef Špaček
 
 BSD 2-Clause License
 
