@@ -38,7 +38,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2013-2017 Michal Josef Špaček
+    © 2013-2022 Michal Josef Špaček
 
     BSD 2-Clause License
 
