@@ -3,6 +3,7 @@
  - Move bugtracker to github.
  - Update author name.
  - Update author github repository.
+ - Update copyright years.
  - Update Module::Install to 1.19 version.
 
 0.26 2017-11-24T11:30:49+01:00
